# gpullall

./: .gitignore  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py
gpullall/: __main__.py  argparser.py  colors.py  exceptions.py  githelpers.py  gpullall.py  progressbar.py  settings.py  syshelpers.py
gpullall/tests/: test_githelpers.py  test_syshelpers.py
