[metadata]
name = gpullall
version = 1.0
description-file = README.rst
license = MIT
classifiers ==
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Environment :: Console
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Version Control :: Git
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = gpullall
install_requires =
  colorama
  GitPython
  unittest
  progress
  importlib; python_version == "3.7"
